WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100381
Web Inspector: inspector tests failing after
r132454
https://bugs.webkit.org/show_bug.cgi?id=100381
Summary
Web Inspector: inspector tests failing after r132454
Pavel Feldman
Reported
2012-10-25 07:48:50 PDT
inspector/profiler/memory-instrumentation-cached-images.html [ Crash ] inspector/profiler/memory-instrumentation-canvas.html [ Crash ]
Attachments
Patch
(2.72 KB, patch)
2012-10-25 08:59 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2012-10-25 07:49:11 PDT
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=@ToT
- chromium.org&tests=inspector/profiler/memory-instrumentation-cached-images.html,inspector/profiler/memory-instrumentation-canvas.html
Yury Semikhatsky
Comment 2
2012-10-25 08:59:56 PDT
Created
attachment 170663
[details]
Patch
WebKit Review Bot
Comment 3
2012-10-25 09:30:48 PDT
Comment on
attachment 170663
[details]
Patch Clearing flags on attachment: 170663 Committed
r132494
: <
http://trac.webkit.org/changeset/132494
>
WebKit Review Bot
Comment 4
2012-10-25 09:30:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug