Web Inspector: inspector tests failing after r132454 https://bugs.webkit.org/show_bug.cgi?id=100381

Reviewed by Pavel Feldman.

Source/WebCore:

Added implementation for DOMNodeWrapperMap::reportMemoryUsage method,
otherwise no actual pointer is reported which breaks instrumentation.

* bindings/v8/IntrusiveDOMWrapperMap.h:

LayoutTests:

Enable memory instrumentation tests now that the problem is fixed.

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/118408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132494 268f45cc-cd09-0410-ab3c-d52691b4dbfc